# JobSearchAutomationApp

./: README.md  app.py  pyproject.toml
job_search_automation/: __init__.py  apply.py  automation.py  cli.py  config.py  llm.py  matcher.py  models.py  resume_parser.py  retriever.py  webapp.py
job_search_automation/job_fetchers/: base.py  local.py  serpapi.py
job_search_automation/sample_data/: jobs.json
job_search_automation/templates/: index.html
tests/: test_llm_fallback.py  test_retriever.py
